models/tests/errors/semantic/typeoverride3.ucl
// UCLID TEST
// Solver=z3
// Result=None

type a = [integer]boolean;
type a = [integer]boolean;

module main {
}